agrega botón comprar (sin funcionalidad)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multipremios, tu forma de ganar</title>
-    <meta name="description" content="Multipremios, sistema para acumular puntos y premios con tus compras.">
-    <meta name="keywords" content="Premios compras fidelizar clientes canjear">
+    <title>dosmasuno, Servicios Gráficos</title>
+    <meta name="description" content="dosmasuno, servicios gráficos para eventos, carteleria.">
+    <meta name="keywords" content="pulseras, llaveros, entradas, tarjetas, carteles ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto&display=swap" rel="stylesheet">
@@ -80,10 +80,10 @@
                 <div class="container-fluid">
                     <ul class="footermenu navbar-nav mx-auto mb-2 mb-lg-2">
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/registrar.html">Registrate</a>
+                            <a class="nav-link" href="">Registrate</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/contacto.html">Contactanos</a>
+                            <a class="nav-link" href="">Contactanos</a>
                         </li>
                     </ul>
                 </div>
