Agrega funcionalidad a boton. Muestra pedido (borrador)

--- a/index.html
+++ b/index.html
@@ -45,33 +45,15 @@
     <!-- Fin header-->
 
     <main class="container-lg" >
-            <section id="tarjetas" class="row justify-content-center  mt-3 mb-3">
-<!--                 <article id="art1" class="card col">
-                    <img id="img1" src="" alt="" class="artImg">
-                    <h4 class="artNombre"></h4>
-                    <h6 class="artDescri"></h6>
-                </article>
-
-                <article id="art2" class="card col">
-                    <img id="img2" src="" alt="" class="artImg">
-                    <h4 class="artNombre"></h4>
-                    <h6 class="artDescri"></h6>
-                </article>
-
-                <article id="art3" class="card col">
-                    <img id="img3" src="" alt="" class="artImg">
-                    <h4 class="artNombre"></h4>
-                    <h6 class="artDescri"></h6>
-                </article>
-
-                <article id="art4" class="card col">
-                    <img id="img4" src="" alt="" class="artImg">
-                    <h4 class="artNombre"></h4>
-                    <h6 class="artDescri"></h6>
-                </article>
- -->
+            <section id="listaProductos" class="row justify-content-center  mt-3 mb-3">
+                  <!-- Esta seccion se completa desde JS -->
             </section>
 
+            <section id="pedido" class="row justify-content-center  mt-3 mb-3">
+                <article id="titulo">TU PEDIDO</article>
+                <div id="cuerpo">--* No se han registrado pedidos aún *--</div>
+                <!-- Esta seccion se completa desde JS -->
+          </section>
 
 
         <footer>
