--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <!-- Esta seccion se completa desde JS -->
             </section>
 
-            <section id="pedido" class="row justify-content-center  mt-3 mb-3">
+            <section id="pedido" class="row justify-content-center  ml-12 mt-3 mb-3">
                 <article id="titulo">TU PEDIDO</article>
                 <div id="cuerpo">--* No se han registrado pedidos aún *--</div>
                 <!-- Esta seccion se completa desde JS -->
