Agrega botón Eliminar en pedido

--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
                   <!-- Esta seccion se completa desde JS -->
             </section>
 
-            <section id="pedido" class="row justify-content-center  ml-12 mt-3 mb-3">
-                <article id="titulo">TU PEDIDO</article>
-                <div id="cuerpo">--* No se han registrado pedidos aún *--</div>
-                <!-- Esta seccion se completa desde JS -->
-          </section>
+            
+            <section id="pedidoContainer">
+                <div id="pedido" class="row justify-content-center  ml-12 mt-3 mb-3">
+                    <div id="titulo">TU PEDIDO</div>
+                    <div id="cuerpo">--* No se han registrado pedidos aún *--</div>
+                    <!-- Esta seccion se completa desde JS -->
+                <div>
+            </section>
 
 
         <footer>
