--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
     <!-- Fin header-->
 
     <main class="container-lg" >
+            <section>
+                Mostrar Rubro:  
+                <button id="bntFiltroStandard" onclick="filtrar('Standard')">Standard</button>
+                <button id="bntFiltroVip" onclick="filtrar('Vip')">Vip</button>
+                <button id="bntFiltroPremium" onclick="filtrar('Premium')">Premium</button>
+                <button id="bntFiltroGold" onclick="filtrar('Gold')" >Gold</button>
+                <button id="bntFiltroTodos" onclick="filtrar('Todos')" >Todos</button>
+            </section>
             <section id="listaProductos" class="row justify-content-center  mt-3 mb-3">
                   <!-- Esta seccion se completa desde JS -->
             </section>
