Se mejora (un poquito) la estetica de botones y paginación.

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <!-- Fin header-->
 
     <main class="container-lg" >
-            <section>
+            <section id="botonesFiltro">
                 Mostrar Rubro:  
-                <button id="bntFiltroStandard" onclick="filtrar('Standard')">Standard</button>
-                <button id="bntFiltroVip" onclick="filtrar('Vip')">Vip</button>
-                <button id="bntFiltroPremium" onclick="filtrar('Premium')">Premium</button>
-                <button id="bntFiltroGold" onclick="filtrar('Gold')" >Gold</button>
-                <button id="bntFiltroTodos" onclick="filtrar('Todos')" >Todos</button>
+                <button class="botonFiltro" onclick="filtrar('Standard')">Standard</button>
+                <button class="botonFiltro" onclick="filtrar('Vip')">Vip</button>
+                <button class="botonFiltro" onclick="filtrar('Premium')">Premium</button>
+                <button class="botonFiltro" onclick="filtrar('Gold')" >Gold</button>
+                <button class="botonFiltro" onclick="filtrar('Todos')" >Todos</button>
             </section>
             <section id="listaProductos" class="row justify-content-center  mt-3 mb-3">
                   <!-- Esta seccion se completa desde JS -->
