Se agrega eventListener para los botones de barra superior

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <main class="container-lg" >
             <section id="botonesFiltro">
                 Mostrar Rubro:  
-                <button class="botonFiltro" onclick="filtrar('Standard')">Standard</button>
-                <button class="botonFiltro" onclick="filtrar('Vip')">Vip</button>
-                <button class="botonFiltro" onclick="filtrar('Premium')">Premium</button>
-                <button class="botonFiltro" onclick="filtrar('Gold')" >Gold</button>
-                <button class="botonFiltro" onclick="filtrar('Todos')" >Todos</button>
+                <button class="botonFiltro" id="btnFiltroStd" >Standard</button>
+                <button class="botonFiltro" id="btnFiltroVip" >Vip</button>
+                <button class="botonFiltro" id="btnFiltroPrm" >Premium</button>
+                <button class="botonFiltro" id="btnFiltroGld" >Gold</button>
+                <button class="botonFiltro" id="btnFiltroAll" >Todos</button>
             </section>
             <section id="listaProductos" class="row justify-content-center  mt-3 mb-3">
                   <!-- Esta seccion se completa desde JS -->
