--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.min.css"> 
     <link rel="stylesheet" href="./public/css/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    
 </head>
 <body class="container">
     <header>
@@ -52,7 +54,14 @@
                 <button class="botonFiltro" id="btnFiltroPrm" >Premium</button>
                 <button class="botonFiltro" id="btnFiltroGld" >Gold</button>
                 <button class="botonFiltro" id="btnFiltroAll" >Todos</button>
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#carritoOffcanvas" aria-controls="carritoOffcanvas">
+                    Ver Carrito <i class="bi bi-cart4"></i>
+                  </button>
             </section>
+            <section id="avisoCompra">
+                <!-- Esta seccion se completa desde JS -->
+            </section>
+
             <section id="listaProductos" class="row justify-content-center  mt-3 mb-3">
                   <!-- Esta seccion se completa desde JS -->
             </section>
@@ -65,6 +74,34 @@
                     <!-- Esta seccion se completa desde JS -->
                 <div>
             </section>
+
+            <!-- Canvas del carrito de compras -->
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="carritoOffcanvas" aria-labelledby="carritoOffcanvasLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasExampleLabel">Carrito de Compras</h5>
+                  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Cant</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col">Total</th>
+                            <th></th>
+                            </tr>
+                        </thead>
+                        <tbody id="items"></tbody>
+                        <tfoot>
+                            <tr id="footer">
+                            <th scope="row" colspan="6">Tu carrito está vacío!</th>
+                            </tr>
+                        </tfoot>
+                    </table>
+
+                </div>
+              </div>
 
 
         <footer>
@@ -84,6 +121,7 @@
     
         </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./js/index.js">  </script>
 </body>
 </html>
