Se optimiza con operadores avanzados

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
                                     <form class="px-4 py-3">
                                         <div class="form-group">
                                             <label for="pedidoEmail">Correo electrónico</label>
-                                            <input type="email" class="form-control" id="pedidoEmail" placeholder="email@example.com">
+                                            <input type="email" class="form-control" id="pedidoMail" placeholder="email@example.com">
                                         </div>
                                         <div class="form-group">
                                             <label for="pedidoNombre">Apellido y Nombre </label>
                                             <input type="text" class="form-control" id="pedidoNombre" placeholder="Apellido y Nombre">
                                         </div>
-                                        <button id="btnEnviarPedido" class="btn btn-primary btnEnviarPedido">Enviar Pedido</button>
                                     </form>
+                                    <button id="btnEnviarPedido" class="btn btn-primary btnEnviarPedido">Enviar Pedido</button>
                                 </div>
                             </div>
                         </div>
