--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     
 </head>
-<body class="container">
+<body class="bg-nav-img">
     <header>
         <!-- Menu Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom border-info">
@@ -72,6 +72,7 @@
                     <button class="botonFiltro" id="btnPulseras" >Pulseras</button>
                     <button class="botonFiltro" id="btnLlaveros" >Llaveros</button>
                     <button class="botonFiltro" id="btnEntradas" >Entradas</button>
+                    <button class="botonFiltro" id="btnPromo" >Promoción</button>
                 </section>
                 <section id="botonCarrito">
                     <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#carritoOffcanvas" aria-controls="carritoOffcanvas">
@@ -79,7 +80,7 @@
                     </button>
                 </section>
             </section>    
-            
+
             <section id="avisoCompra">
                 <!-- Esta seccion se completa desde JS -->
             </section>
@@ -89,8 +90,8 @@
             </section>
 
             <!-- Canvas del carrito de compras -->
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="carritoOffcanvas" aria-labelledby="carritoOffcanvasLabel">
-                <div class="offcanvas-header">
+            <div class="offcanvas offcanvas-end bg-info" tabindex="-1" id="carritoOffcanvas" aria-labelledby="carritoOffcanvasLabel">
+                <div class="offcanvas-header  bg-primary">
                   <h5 class="offcanvas-title" id="offcanvasExampleLabel">Carrito de Compras</h5>
                   <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
