se agrega contador de carrito.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </section>
                 <section id="botonCarrito">
                     <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#carritoOffcanvas" aria-controls="carritoOffcanvas">
-                         Carrito <i class="bi bi-cart4"></i>
+                        <i class="bi bi-cart4"></i><span id="contadorCarrito"></span>
                     </button>
                 </section>
             </section>    
@@ -93,17 +93,7 @@
                 </div>
                 <div class="offcanvas-body">
                      <table class="table">
-                       <!-- <thead>
-                            <tr>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Cant</th>
-                            <th scope="col">Precio</th>
-                            <th scope="col">Total</th>
-                            <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody> -->
+    
                         <tbody id="items">
                         </tbody>
                         <tfoot>
